--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,28 +1,26 @@
 .dialogs {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
-
+  display: grid;
+  grid-template-columns: 2fr 10fr;
 }
 .dialogItems {
-    padding: 10px;
-
+  padding: 10px;
 }
 
 .dialogItems a.active {
-    color: goldenrod;
+  color: goldenrod;
 }
 
-.dialog a{
-    color: #fff;
-    text-decoration: none;
+.dialog a {
+  color: #fff;
+  text-decoration: none;
 }
 
-
-.messages{
-    padding: 10px;
-
+.messages {
+  padding: 10px;
 }
 
-.messages .message{
-    
+.dialog img,
+.message img {
+  width: 20px;
+  height: 20px;
 }
