--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,8 +6,14 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   z-index: 999;
   position: relative;
-
 }
 .header img {
   width: 20px;
+}
+
+.login_block {
+  float: right;
+}
+.login_block a {
+  color: navy;
 }
