--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,13 @@
 .descriptionBlock {
   padding: 10px;
 }
+.userPhoto {
+  max-width: 200px;
+}
+.contact {
+  padding-left: 10px;
+}
+.formSummaryError {
+  color: red;
+  border: 1px solid red;
+}
